--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://https://github.com/maisa80/basicLayout-react",
+  "homepage": "http://github.com/maisa80/basicLayout-react",
   "name": "layout-react",
   "version": "0.1.0",
   "private": true,
